--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Enforce Branch Protection Rules
         run: |
-          curl -X PUT -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          curl -X PUT -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
           -d '{
@@ -32,4 +32,4 @@ jobs:
             "allow_deletions": false
           }'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
