--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Enforce Branch Protection Rules
         run: |
-          curl -X PUT -H "Authorization: Bearer ${{ secrets.GH_SECRET }}" \
+          set -e  # Exit immediately if a command fails
+          
+          response=$(curl -X PUT -H "Authorization: Bearer ${{ secrets.GH_SECRET }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
           -d '{
@@ -30,6 +32,9 @@ jobs:
             "required_conversation_resolution": true,
             "allow_force_pushes": false,
             "allow_deletions": false
-          }'
+          }')
+
+          # Check if the API call was successful
+          echo "$response" | grep '"url"' || { echo "Branch protection enforcement failed"; exit 1; }
         env:
           GH_SECRET: ${{ secrets.GH_SECRET }}
